--- a/logingerente.html
+++ b/logingerente.html
@@ -7,7 +7,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script type="text/javascript" src="login.js"></script>
+    <script type="text/javascript" src="logingerente.js"></script>
     <link rel="stylesheet" href="css\biblioteca_estilos.css">
 </head>
 
@@ -35,8 +35,9 @@
             <input id="txtsenha" type="password" class="form-control" placeholder="Digite sua senha"
                 aria-label="Username" aria-describedby="addon-wrapping">
         </div><br>
+        <p id = "submit"></p>
+        <button  onclick="logar()" type="button" class="btn btn-outline-dark btn-block btn-lg">Login</button>
 
-        <button onclick="logar()" type="button" class="btn btn-primary">Login</button>
 
     </div>
 
