--- a/logingerente.html
+++ b/logingerente.html
@@ -12,25 +12,42 @@
 </head>
 
 <body>
+<table border="0" width="100%" class="menu">
+        <tr>
+            <td style="text-align: center"><a href="..\trabalhofinal\agendamentocliente.html"> <img <td
+                        align="center">Agendamento Atendimento Presencial</td>
+            <td align="center"></td>
+            <td align="center"></td>
+            <td style="text-align: center"><a href="..\html\logingerente.html">Portal do Colaborador</a></td>
+        </tr>
 
+    </table>
+
+    <table border="0" width="100%" class="menu">
+        <tr>
+            <td align="center"><a href="..\trabalhofinal\agendamentocliente.html"> <img
+                        src="..\trabalhofinal\imagens\barra.png" width="100%" height="100%"> </td>
+        </tr>
+
+    </table>
     <div class="container">
         <br>
         <div class="row">
-            <div class="col-12">
-                <h3 style="text-align: center;">LOGIN - GERENTE</h3>
-            </div>
-        </div>
-        <br>
+            <div class="col-lg-1 col-md-1 col-sm-1 div1"></div>
+            <div class="col-lg-10 col-md-10 col-sm-10 div2">
+                <BR>
+                <h3 align="center" style="text-align: center;">LOGIN - GERENTE</h3>
+                <br>
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="addon-wrapping">E-mail</span>
+                <label for="inputAg"> Usuário  </label>
             </div>
             <input id="txtemail" type="email" class="form-control" placeholder="Digite seu e-mail" aria-label="Username"
                 aria-describedby="addon-wrapping">
         </div> <br>
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="addon-wrapping">Senha</span>
+                <label for="inputAg">Senha </label>
             </div>
             <input id="txtsenha" type="password" class="form-control" placeholder="Digite sua senha"
                 aria-label="Username" aria-describedby="addon-wrapping">
