--- a/relatorio.html
+++ b/relatorio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -12,6 +12,29 @@
 </head>
 
 <body onload="carregardados()">
+
+    <table border="0" width="100%" class="menu">
+        <tr>
+            <td style="text-align: center"><a href="..\trabalhofinal\agendamentocliente.html"> <img <td
+                        align="center">Agendamento Atendimento Presencial</td>
+            <td align="center"></td>
+            <td align="center"></td>
+            <td style="text-align: center"><a href="..\html\logingerente.html">Portal do Colaborador</a></td>
+        </tr>
+
+    </table>
+
+    <table border="0" width="100%" class="menu">
+        <tr>
+            <td align="center"><a href="..\trabalhofinal\agendamentocliente.html"> <img
+                        src="..\trabalhofinal\imagens\barra.png" width="100%" height="100%"> </td>
+        </tr>
+
+    </table>
+
+
+    
+
 
     <div class="container">
         <br>
