--- a/relatorio.html
+++ b/relatorio.html
@@ -84,12 +84,11 @@
         </div>
 
         <br><br>
-        <button onclick="filtrar()" type="button" class="btn btn-primary">Filtrar</button>
-
-        <br><br>
-        <h3>Resultado</h3>
+        <button onclick="filtrar()" type="button" class="btn btn-outline-dark btn-block btn-lg">Filtrar</button>
         <br>
-        <h4 id="resultado"></h4>
+        <div class="table-responsive-sm">
+            <h4 id="resultado"></h4>
+        </div>        
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
