alteracao nos botes e direcionamento de pagina

--- a/agendamentocliente.html
+++ b/agendamentocliente.html
@@ -37,7 +37,7 @@
                         align="center">Agendamento Atendimento Presencial</td>
             <td align="center"></td>
             <td align="center"></td>
-            <td style="text-align: center"><a href="..\html\logingerente.html">Portal do Colaborador</a></td>
+            <td style="text-align: center"><a href="logingerente.html">Portal do Colaborador</a></td>
         </tr>
 
     </table>
