--- a/relatorio.html
+++ b/relatorio.html
@@ -19,7 +19,7 @@
                         align="center">Agendamento Atendimento Presencial</td>
             <td align="center"></td>
             <td align="center"></td>
-            <td style="text-align: center"><a href="..\html\logingerente.html">Portal do Colaborador</a></td>
+            <td style="text-align: center"><a href="logingerente.html">Portal do Colaborador</a></td>
         </tr>
 
     </table>
@@ -40,7 +40,7 @@
         <br>
         <div class="row">
             <div class="col-12">
-                <h3 style="text-align: center;">AGENDAMENTO</h3>
+                <h3 style="text-align: center;">RELATÓRIO DE AGENDAMENTOS</h3>
             </div>
         </div>
         <div class="row">
@@ -52,7 +52,7 @@
 
             </div>
             <div class="col-sm">
-                <button type="button" class="btn btn-primary">Logout</button>
+                <button type="button" class="btn btn-outline-danger" onclick="logout()">Logout</button>
             </div>
         </div>
         <br>
